dist_man1_MANS=

if BUILD_VADERCOIND
  dist_man1_MANS+=vadercoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=vadercoin-qt.1
endif

if BUILD_VADERCOIN_CLI
  dist_man1_MANS+=vadercoin-cli.1
endif

if BUILD_VADERCOIN_TX
  dist_man1_MANS+=vadercoin-tx.1
endif

if BUILD_VADERCOIN_UTIL
  dist_man1_MANS+=vadercoin-util.1
endif

if ENABLE_WALLET
if BUILD_VADERCOIN_WALLET
  dist_man1_MANS+=vadercoin-wallet.1
endif
endif
